html base code with comments

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
+<!-- Le type du document, balise unique -->
 <!DOCTYPE html>
-<html lang="en">
+<!-- Racine du document, toutes les autrez balises sont à l'intérieurs -->
+<html lang="fr">
+<!-- Informations générales sur le document -->
 <head>
+    <!-- Balise de metadonnées, l'attribut charset indique l'encodage utilisé -->
     <meta charset="UTF-8">
+    <!-- Le titre du document -->
     <title>Document</title>
 </head>
+<!-- Le contenue de la page -->
 <body>
     
 </body>
